# vslib_experiments

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.jobs.yml  .pre-commit-config.yaml  Makefile  README.md  addressRegistry.h  background.cpp  background.h  baseComponent.h  fgc4.memmap  main.cpp  mmtool.py  param.h  parameterRegistry.cpp  parameterRegistry.h  pid.h  receiver.cpp  remote.cpp  rst.h  sharedMemory.h  shared_mem.h
source/linux_parameter_setter/: CMakeLists.txt  Util_Mmap.h  cmake_command  linux_parameter_setter.cpp  loader.cpp  remote.cpp  remote_user.cpp  shared_memory.h
source/linux_parameter_setter/lib/: nlohmann
source/utils/: CMakeLists.txt  constants.h  constants.hpp  counters.h  errorCodes.h  errorCodes.hpp  errorMessage.h  errorMessage.hpp  fsm.h  fsm.hpp  fsm2.h  functionGenerator.h  functionGenerator.hpp  ip_cores_memory_map.hpp  logString.h  logString.hpp  messageQueue.cpp  messageQueue.h  messageQueue.hpp  pollCpuClock.h  pollCpuClock.hpp  readCsv.h  ringBufferAllocator.h  ringBufferAllocator.hpp  sharedMemoryVslib.h  staticJson.h  staticJson.hpp  typeLabel.h  typeLabel.hpp  typeTraits.h  typeTraits.hpp  version.hpp  warningMessage.h  warningMessage.hpp
source/utils/tests/: errorMessageTest.cpp  functionGeneratorTest.cpp  logStringTest.cpp  messageQueueTest.cpp  message_queue.cpp  message_queue_demo.cpp  readCsvTest.cpp  ringBufferAllocatorTest.cpp  ringBufferTest.cpp  staticJsonTest.cpp  typeLabelTest.cpp  warningMessageTest.cpp
source/utils/tests/inputs/: input1.csv  input1_semicolons.csv  input2.csv  input2_semicolons.csv  input4.csv  input5.csv  input6.csv
source/vloop/: CMakeLists.txt  afe.h  afe.hpp  afe_rst.h  afe_rst.hpp  afe_vdc_bal.h  afe_vdc_bal.hpp  cmake_command  fsm_afe.cpp  fsm_afe.hpp  fsm_crowbar.cpp  fsm_crowbar.hpp  fsm_dcdc_charging.cpp  fsm_dcdc_charging.hpp  fsm_dcdc_floating.cpp  fsm_dcdc_floating.hpp  fsm_main.cpp  fsm_main.hpp  main.cpp  pops_constants.h  pops_constants.hpp  pops_current_balancing.h  pops_current_balancing_old.h  pops_dispatcher.h  pops_utils.hpp  sharedMemory.h  svc_uart.hpp  user.h  user.hpp  user_cwb.hpp  user_dc_ch.hpp  vslib.h
source/vloop/inc/: Communication.h  user.hpp
source/vloop/src/: Communication.cpp  user.cpp
source/vloop/vslib/: CMakeLists.txt
source/vloop/vslib/constants/: constants.h
source/vloop/vslib/utils/: logString.h  ringBufferAllocator.h  staticJson.h  typeLabel.h
source/vslib/: .clang-tidy  CMakeLists.txt  main.cpp  main_vslib.hpp  versions.h  versions.hpp  vslib.hpp  vslib_shared_memory.spec
source/vslib/background/: CMakeLists.txt
source/vslib/background/inc/: background.h  parameterMap.h  parameterMap.hpp  parameterSetting.h  parameterSetting.hpp
source/vslib/background/src/: background.cpp  parameterMap.cpp  parameterSetting.cpp
source/vslib/background/tests/: backgroundTest.cpp  backgroundTests.cpp  parameterMapTest.cpp  parameterSettingTest.cpp
source/vslib/components/: CMakeLists.txt
source/vslib/components/inc/: FIRFilter.h  IIRFilter.h  abcToAlphaBetaTransform.h  abcToAlphaBetaTransform.hpp  abcToDq0Transform.h  abcToDq0Transform.hpp  alphaBetaToAbcTransform.h  alphaBetaToAbcTransform.hpp  alphaBetaToDq0Transform.h  alphaBetaToDq0Transform.hpp  alphaBetaZeroToDq0Transform.h  boxFilter.h  boxFilter.hpp  boxFilterFirstOrder.h  boxFirstOrderFilter.h  boxSecondOrderFilter.h  clarkeParkTransform.h  clarkeTransform.h  component.h  component.hpp  componentArray.h  componentArray.hpp  componentRegistry.h  compositePID.h  converter.h  cosLookupTable.h  cosLookupTable.hpp  dq0ToAbcTransform.h  dq0ToAbcTransform.hpp  dq0ToAlphaBetaTransform.h  dq0ToAlphaBetaTransform.hpp  filter.h  filter.hpp  filterFactory.h  firFilter.h  firFilter.hpp  firFirstOrderFilter.h  firSecondOrderFilter.h  fullBridge.h  fullBridge.hpp  (+54 more)
source/vslib/components/src/: abcToAlphaBetaTransform.cpp  abcToDq0Transform.cpp  alphaBetaToAbcTransform.cpp  alphaBetaToDq0Transform.cpp  alphaBetaZeroToDq0Transform.cpp  boxFilter.cpp  clarkeParkTransform.cpp  clarkeTransform.cpp  componentRegistry.cpp  dq0ToAbcTransform.cpp  dq0ToAlphaBetaTransform.cpp  firFilter.cpp  iirFilter.cpp  instantaneousPowerThreePhase.cpp  interruptRegistry.cpp  parkTransform.cpp  rstController.cpp  srfPll.cpp
source/vslib/components/tests/: abcToAlphaBetaTransformTest.cpp  abcToDq0TransformTest.cpp  alphaBetaToAbcTransformTest.cpp  alphaBetaToDq0TransformTest.cpp  alphaBetaZeroToDq0TransformTest.cpp  boxFilterTest.cpp  boxFirstOrderFilterTest.cpp  boxSecondOrderFilterTest.cpp  clarkeParkTransformTest.cpp  clarkeTransformTest.cpp  componentArrayTest.cpp  componentRegistryTest.cpp  componentTest.cpp  componentTests.cpp  cosLookupTableTest.cpp  dq0ToAbcTransformTest.cpp  dq0ToAlphaBetaTransformTest.cpp  firFilterTest.cpp  firFirstOrderFilterTest.cpp  firSecondOrderFilterTest.cpp  halfBridgeTest.cpp  iirFilterTest.cpp  iirFirstOrderFilterTest.cpp  instantaneousPowerThreePhaseTest.cpp  limitIntegralTest.cpp  limitRangeTest.cpp  limitRateTest.cpp  limitRmsTest.cpp  limitTest.cpp  lookupTableTest.cpp  parkTransformTest.cpp  periodicLookupTableTest.cpp  pidClassicTest.cpp  pidRstTest.cpp  pidTest.cpp  pllTest.cpp  rootComponentTest.cpp  rstControllerTest.cpp  rstTest.cpp  sinLookupTableTest.cpp  (+2 more)
source/vslib/constants/: constants.h
source/vslib/docs/: Doxyfile
source/vslib/docs/source/: api.rst  conf.py  index.rst
source/vslib/interrupts/inc/: interrupt.h  interrupt.hpp  interruptRegistry.h  interruptRegistry.hpp  peripheralInterrupt.h  peripheralInterrupt.hpp  timerInterrupt.h  timerInterrupt.hpp
source/vslib/parameters/: CMakeLists.txt
source/vslib/parameters/inc/: bufferSwitch.h  iparameter.h  iparameter.hpp  parameter.h  parameter.hpp  parameterRegistry.h  parameterRegistry.hpp  parameterSerializer.h  parameterSerializer.hpp
source/vslib/parameters/src/: parameterRegistry.cpp
source/vslib/parameters/tests/: parameterRegistryTest.cpp  parameterSerializerTest.cpp  parameterTest.cpp  parameterTests.cpp
source/vslib/utils/: CMakeLists.txt  constants.h  errorMessage.h  staticJson.h  typeLabel.h
(+469 files in other folders)
